# SortAlgorithmViewer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  SortAlgorithmViewer  sfml_installer.sh
OriginalSortAlgorithms/: BubbleSort.cpp  HeapSort.cpp  SelectionSort.cpp
include/: SortAlgorithms.h  VisualVector.h  VisualWindow.h
src/: SortAlgorithms.cpp  VisualVector.cpp  VisualWindow.cpp  main.cpp
